--- a/TournamentMaster3000/src/main/resources/templates/register.html
+++ b/TournamentMaster3000/src/main/resources/templates/register.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Register</title>
 </head>
 <body>
 
-<h2>Login</h2>
+<h2>Register</h2>
 
-<form th:action="@{/login}" method="post">
+<form th:action="@{/register}" method="post">
     <input type="hidden"
            th:name="${_csrf.parameterName}"
            th:value="${_csrf.token}" />
@@ -23,15 +23,13 @@
         <input type="password" name="password"/>
     </div>
 
-<button type="submit">Sign in</button>
+    <button type="submit">Create account</button>
 </form>
 
-<p th:if="${param.error}" style="color:red">Invalid username or password</p>
-<p th:if="${param.registered}" style="color:green">Account created. Please sign in.</p>
-<p th:if="${param.logout}" style="color:green">You have been logged out</p>
+<p th:if="${error}" th:text="${error}" style="color:red"></p>
 
 <p>
-    <a th:href="@{/register}">Create an account</a>
+    <a th:href="@{/login}">Back to login</a>
 </p>
 
 </body>
