--- a/TournamentMaster3000/src/main/resources/templates/login.html
+++ b/TournamentMaster3000/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 
 <h2>Login</h2>
 
-<form th:action="@{/login}" method="post">
+<form th:action="@{/perform_login}" method="post">
     <input type="hidden"
            th:name="${_csrf.parameterName}"
            th:value="${_csrf.token}" />
